<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kronos.mainLayouts.QuizActivity">

    <LinearLayout
        android:id="@+id/quizTopLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/quiz_layout"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/timer" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/correctAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct" />

        <TextView
            android:id="@+id/correctValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/wrongAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong" />

        <TextView
            android:id="@+id/wrongValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/quizMainLayout"
        android:layout_width="354dp"
        android:layout_height="402dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/quiz_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizTopLayout">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/questions"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/question_layout"
                android:gravity="center"
                android:text="@string/question"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answerA"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/question_layout"
                android:gravity="center"
                android:text="@string/answer_a"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answerB"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/question_layout"
                android:gravity="center"
                android:text="@string/answer_b"
                android:textSize="20sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/answerC"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/question_layout"
                android:gravity="center"
                android:text="@string/answer_c"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/answerD"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/question_layout"
                android:gravity="center"
                android:text="@string/answer_d"
                android:textSize="20sp" />


        </LinearLayout>

        </ScrollView>





    </LinearLayout>

    <LinearLayout
        android:id="@+id/quizButtonLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:background="@drawable/quiz_layout"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizMainLayout">


        <Button
            android:id="@+id/finishBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/finish"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nextBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/next"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>